scss/main.scss
$color_storm_dust_approx: #606262;
$color_bon_jour_approx: #dde1e3;

.popover-title {
        letter-spacing: normal;
}
.warmoo-pro-pop-stress {
        font-weight: bold;
}
.greypro-icon {
        color: $color_storm_dust_approx;
        font-size: 1.2em;
        position: relative;
        top: -2px;
        margin-right: 2px;
}
.warmoo-pro-pop-stress-main {
        font-weight: bold;
        font-size: 1.2em;
        letter-spacing: -1px;
}
.warmoo-pro-pop-pic {
        width: 110px;
        float: left;
        img {
                border: 1px solid $color_bon_jour_approx;
                margin-bottom: 10px;
        }
}
.warmoo-pro-po-lister {
        margin-left: 110px;
        margin-top: 5px;
        li {
                list-style-type: none;
        }
}
.warmoo-pro-pop-label {
        font-size: .9em;
        color: $color_storm_dust_approx;
}


/* Footer */

.id7-page-footer .id7-site-footer, .id7-page-footer .id7-app-footer {
        padding-right: 20px;
        padding-left: 20px;
        margin-right: auto;
        margin-left: auto;
        position: relative;
        padding-top: 20px;
}

.id7-page-footer .id7-site-footer {
        background: #d3d3d3;
        color: #383838;
}

.id7-page-footer .id7-app-footer {
        background: #204f79;
        color: white;
}

.id7-page-footer .id7-app-footer .id7-footer-utility ul {
        padding-left: 0;
        list-style: none;
        margin: 0;
}

.id7-page-footer .id7-app-footer .id7-footer-utility ul > li {
        display: inline-block;
        padding: 0;
        margin: 0;
}

.id7-page-footer .id7-app-footer .id7-footer-utility ul > li:first-child::before {
        content: none;
        display: none;
}

.id7-page-footer .id7-app-footer .id7-footer-utility ul > li::before {
        content: '|';
        margin-left: 0.1em;
        margin-right: 0.2em;
        color: #777777;
}

.id7-page-footer .id7-app-footer {
        font-size: 85%;
}

.id7-page-footer .id7-site-footer {
        color: #383838;
}

.id7-page-footer .id7-site-footer a, .id7-page-footer .id7-site-footer a:link, .id7-page-footer .id7-site-footer a:visited {
        -webkit-text-decoration-color: #747474;
        text-decoration-color: #747474;
}

.id7-page-footer .id7-site-footer a, .id7-page-footer .id7-site-footer a:link, .id7-page-footer .id7-site-footer a:visited {
        color: #383838;
}

.id7-page-footer .id7-app-footer a, .id7-page-footer .id7-app-footer a:link, .id7-page-footer .id7-app-footer a:visited {
        -webkit-text-decoration-color: #ffffff;
        text-decoration-color: #ffffff;
        color: #ffffff;
}

.id7-page-footer.id7-footer-coloured .id7-app-footer .id7-logo-bleed::before, .id7-page-footer.id7-footer-coloured .id7-app-footer .id7-logo-bleed::after {
        border-top-color: #d3d3d3;
}

footer .id7-site-footer .id7-logo-bleed, footer .id7-app-footer .id7-logo-bleed {
        position: relative;
        height: 40px;
        width: 81.2392px;
        position: absolute;
        top: 0px;
        right: 10%;
}

footer .id7-site-footer .id7-logo-bleed::after, footer .id7-app-footer .id7-logo-bleed::after {
        content: '';
        display: block;
        width: 0;
        height: 0;
        border-left: 22.82px solid transparent;
        border-right: 22.82px solid transparent;
        border-top: 40px solid white;
        position: absolute;
        top: 0px;
        right: 0px;
}

footer .id7-site-footer .id7-logo-bleed::before, footer .id7-app-footer .id7-logo-bleed::before {
        content: '';
        display: block;
        width: 0;
        height: 0;
        border-left: 22.82px solid transparent;
        border-right: 22.82px solid transparent;
        border-top: 40px solid white;
        position: absolute;
        top: 0px;
        left: 0px;
}

footer .id7-site-footer .id7-logo-bleed + *, footer .id7-app-footer .id7-logo-bleed + * {

        margin-top: 20px;

}

//footer .id7-app-footer .id7-footer-utility {
//        margin-bottom: 20px;
//}

footer p {
        margin-top: 0;
        margin-bottom: 0;
}

footer .id7-app-footer .id7-logo-bleed + * {
        margin-top: 20px;
}


footer {
        font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
        font-size: 14px;
        line-height: 1.6;
        color: #383838;
}

.no-overflow .row {
        max-width:100%;
}

/* Header */

.navbar {
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        padding-bottom: 0px;
        height: 85px;
        max-height: 85px;
        z-index: 1018!important;
}


// We're making the navbar bigger, so need to shift other things down....

#page {
        margin-top: 85px;
}

[data-region="drawer"]
{
        top: 85px;
        height: calc(100% - 85px);
}

.message-drawer {
        top: 85px;
        height: calc(100% - 85px);
}

/* User menu style alteration */

.user-menu {
        font-size: 10px;
}

.usermenu .login {
        line-height: 1rem;
        color: rgb(255, 255, 255)
}

.usermenu .login a {
        color: rgb(250, 250, 250);
}

.usermenu .login a:hover, .usermenu .login a:focus {
        color: rgb(250, 250, 250);
        text-decoration: underline;
}

.avatars {
        display: none;
}

.userbutton .usertext {
        color: rgb(255, 255, 255)
}

.nav .usermenu .dropdown-toggle {
        color: rgb(255, 255, 255)
}

.id7-header {
        vertical-align: top;
        width: 100%;
        height: 100%;
}

.id7-utility-bar {
        vertical-align: top;
        width: 100%;
        background: #204f79;
        max-height: 40px;
        //position: relative;
        margin-right: auto;
        margin-left: auto;
        height: 24px;
        line-height: 24px;

}

.id7-masthead {
        //display: inline-block;
}

.id7-logo-below {
        float: left;
        position: relative;
        margin-left: 20px;
        display: inline-block;

}

#warwick-id7-logo-top {
        height: 50px;
}

.drawer-toggle {
        position: relative;
        left: 30px;
        top: 5px;
        vertical-align: middle;
}

.userbutton.usertext.role {
        color: #005c82;
}

.right-hand-options {
        float: right;
        align: top;
        padding-top: 5px;
        display: inline-block;
}

.search-box {
        float: left;
        clear: none;
        display: inline-block;
}

.search-box input {
        text-indent: 32px;
}

.search-box-input-wrapper {
        display:inline-block;
        position: relative
}

.search-box-input-wrapper .fa-search {
        position: absolute;
        top: 10px;
        left: 10px;
}

.notifications-box {
        float: right;
        clear: none;
        display: inline;
}

// Don't display list item for notifications and messages

.notifications-box > li {
        list-style-type:none;
        display: inline;
        float: left;
}

#nav-notification-popover-container > .nav-link {
        display: inline;
}

.notifications-box > .nav-item > div {
        display: inline;
}

[data-region=right-hand-drawer].drawer {
        top: 85px;
}


// Moodle tags

.tag-info {
        background-color: #005C82;
}

// Frontpage

.frontpage {
        background-color:  #204f79;
}

.frontpage-card-container.frontpage-card {
        max-width: 350px;
        width: 350px;
        //padding: 0px 40px;
}

.frontpage .frontpage-card {
        background-color: #F7F7F7;

        padding-top: 0px;
        padding-left: 25px;
        padding-right: 25px;
        padding-bottom: 30px;
        margin: 0 auto 25px;

        // Shadows and borders
        -moz-border-radius: 2px;
        -webkit-border-radius: 2px;
        border-radius: 2px;
        -moz-box-shadow: 0px 2px 2px rgb(66, 61, 22);
        -webkit-box-shadow: 0px 2px 2px rgb(66, 61, 22);
        box-shadow: 0px 2px 2px rgb(66, 61, 22);
}

.frontpage-warwick-img-card {
        width: 250px;

        // Push logo to the top
        position: relative;
        top: 0px;

        // Center
        display: block;
        margin: auto;
}

.frontpage-moodle-img-card {
        width: 150px;

        // Center
        display: block;
        margin: auto;

        // Give some space
        padding-top: 25px;
        padding-bottom: 25px;
}

.frontpage-card-text {
        // Give some space
        padding-top: 20px;
        padding-bottom: 20px;
        text-align: center;
}

.btn.btn-signin {
        background-color: #1177d1;

        padding: 0px;
        border-top: 25px;

        font-weight: 700;
        height: 36px;
        line-height: 36px;

        vertical-align: middle;

        // Shadows and borders
        -moz-border-radius: 2px;
        -webkit-border-radius: 2px;
        border-radius: 2px;
        -moz-box-shadow: 0px 2px 2px rgb(66, 61, 22);
        -webkit-box-shadow: 0px 2px 2px rgb(66, 61, 22);
        box-shadow: 0px 2px 2px rgb(66, 61, 22);
}


// If we don't do this, margin is introduced for the nav drawer
#page-site-index.pagelayout-frontpage {
        margin-left: 0px !important;
}

// MOO-1395 - ensure Echo button is centered
.echolinkcontainer {
        text-align: center;
        display: block;
}

// MOO-2265
#quiz-timer-wrapper {
    top: 90px!important;
}

// MOO-2251
[data-region=right-hand-drawer].drawer {
    padding-bottom: 30px!important;
}

